Revert "Fix text hint alignment"
This reverts commit d81d705aff4229d85e3f9156a32da4d9434e26cd.

--- a/app/src/main/assets/math_text_view/css/math_text_view.css
+++ b/app/src/main/assets/math_text_view/css/math_text_view.css
@@ -35,8 +35,6 @@ div {
 
 .math-text-view:empty::before {
   content: attr(hint);
-  position: absolute;
-  margin-top: calc(0.02em + 0.8px);
   opacity: 0.5;
 }
 
